--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Todo List</title>
+    <title>Lowes TodoList</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="http://cdn.bootcss.com/materialize/0.97.7/css/materialize.min.css">
     <link href="http://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
