--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
-<div id="app">
+<div id="App">
     <router-view></router-view>
 </div>
 <script src="http://cdn.bootcss.com/materialize/0.97.7/js/materialize.min.js"></script>
