use lazy loading and commonsChunkPlugin for vue&vuex&vue-router

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <router-view></router-view>
 </div>
 <script src="http://cdn.bootcss.com/materialize/0.97.7/js/materialize.min.js"></script>
-<script src="bundle.js"></script>
+<script src="build/commons.js"></script>
+<script src="build/bundle.min.js"></script>
 </body>
 </html>
